--- a/idf_component.yml
+++ b/idf_component.yml
@@ -3,3 +3,7 @@ dependencies:
   ## Required IDF version
   idf:
     version: ">=4.1.0"
+  OmegaUtilityDriver:
+    git: https://github.com/Omegaki113r/OmegaUtilityDriver.git
+  OmegaBaseLoggingController:
+    git: https://github.com/Omegaki113r/OmegaBaseLoggingController.git
